--- a/styles/style.css
+++ b/styles/style.css
@@ -36,7 +36,7 @@ body{
     font-weight: 400;
     color: rgb(198, 195, 195);
     width: 750px;
-    margin: 10px auto 30px;
+    margin: 10px auto;
 }
 .primary-btn{
     border: none;
@@ -46,6 +46,7 @@ body{
     padding: 20px 25px;
     font-size: 20px;
     font-weight: 700;
+    margin-top: 30px;
 }
 
 /* Donate amount  */
@@ -89,4 +90,57 @@ section.donate-amount {
     border: 3px solid rgb(239 34 34);
     background-color: rgb(244 101 139 / 19%) !important;
     color: rgb(255 0 16 / 97%) !important;
+}
+.amount{
+    color: #46454587;
+    font-size: 18px;
+    font-weight: 700;
+    margin: 100px auto 15px;
+}
+
+/* our donate */
+
+.items{
+    display: flex;
+    justify-content: space-between;
+    gap: 18px;
+}
+.item {
+    padding: 20px;
+    border-radius: 5px;
+    text-align: left;
+}
+.one{
+    background: #aadfc33b;
+}
+.two{
+    background: #db3e341a;
+}
+.three{
+    background: #f7e50f54;
+}
+
+
+/* Depend */
+
+.depend{
+   display: flex;
+   justify-content: space-between;
+   gap: 30px;
+}
+.content{
+    text-align: left;
+}
+.content h2{
+    font-size: 50px;
+    font-weight: 700;
+}
+.content p{
+    font-size: 22px;
+    color: #464545;
+    margin: 50px 0 0;
+}
+.space{
+    margin-top: 120px;
+    margin-bottom: 100px;
 }
